<?xml version="1.0"?>
<package format="2">
  <name>respeaker_ros</name>
  <version>0.1.0</version>
  <description>API for ReSpeaker mic array's audio streams and lights</description>
  <maintainer email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</maintainer>
  <license>Apache</license>
  <author email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_virtualenv</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>portaudio19-dev</build_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>audio_common_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python-pyaudio</exec_depend>
  <exec_depend>speech_recognition_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <test_depend>roslaunch</test_depend>

  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
